# SystemMonitor_ND

./: .gitmodules  CMakeLists.txt  Makefile
include/: data_holder.h  processor.h  utils.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp  utils.cpp
tests/: data_holder_test.cpp  format_test.cpp  read_file_test.cpp
